--- a/src/main/resources/templates/board/saveForm.mustache
+++ b/src/main/resources/templates/board/saveForm.mustache
@@ -9,7 +9,8 @@
         <div class="card-body">
             <form action="/board/save" method="post" enctype="application/x-www-form-urlencoded">
                 <div class="mb-3">
-                    <input type="text" class="form-control" placeholder="Enter title" name="title">
+                    <input type="text" class="form-control" placeholder="Enter title" name="title" required maxlength="100">
+                    <!-- content는 비워도, title은 공백이면 안된다.-->
                 </div>
                 <div class="mb-3">
                     <textarea class="form-control" rows="5" name="content"></textarea>
