--- a/src/main/resources/templates/board/detailForm.mustache
+++ b/src/main/resources/templates/board/detailForm.mustache
@@ -13,13 +13,14 @@
         <div class="d-flex justify-content-end">
             <!-- 수정은 수정페이지로 이동이기 때문에 get요청 또는 하이퍼링크 버튼으로 만들어도 된다 -->
             <!-- 1. 버튼 -->
-            <form action="/board/{{board.id}}/updateForm" method="get" enctype="application/x-www-form-urlencoded">
+            <form action="/board/{{dtos.0.boardId}}/updateForm" method="get" enctype="application/x-www-form-urlencoded">
                 <input type="hidden" class="form-control" value="수정" name="수정">
                 <button type="submit" class="btn btn-success">수정</button>
             </form>
             <!--2. 버튼 -->
-            <!-- <a class="btn btn-success" href="/board/{{board.id}}/updateForm">수정</a> -->
-            <form action="/board/{{board.id}}/delete" method="post" enctype="application/x-www-form-urlencoded">
+            <!-- <a class="btn btn-success" href="/board/{{dtos.0.boardId}}/delete">수정</a> -->
+            <!-- ★★ 주석도 오류에 걸리니까 꼭 유의하자!!!!-->
+            <form action="/board/{{dtos.0.boardId}}/delete" method="post" enctype="application/x-www-form-urlencoded">
                 <input type="hidden" class="form-control" value="삭제" name="삭제">
                 <button type="submit" class="btn btn-danger">삭제</button>
             </form>
@@ -28,26 +29,26 @@
     </div>
 
     <!-- 게시글내용 -->
-    {{#board}}
-    <!-- if문으로 감싸주지 않고 바로 {{board.id}}라고 하면 null값일 때 터진다.-->
     <div class="pt-1 d-flex justify-content-start">
         <div class="card form-control">
-            <td>글 번호 : {{id}}</td>
-            <td>작성자 : {{user.username}}</td>
+            <td>글 번호 : {{dtos.0.boardId}}</td>
+            <td>작성자 번호: {{dtos.0.boardUserId}}</td>
             <div class="card-body">
-                <h3 class="card-title">{{title}}</h3>
+                <h3 class="card-title">{{dtos.0.boardTitle}}</h3>
                 </hr>
-                <p class="card-text">{{content}}</p>
+                <p class="card-text">{{dtos.0.boardContent}}</p>
             </div>
         </div>
-    </div>
-    {{/board}}
+    </div> 
 
     <!-- 댓글내용 -->
     <div class="card form-control">
-        <form action="#" method="post" enctype="application/x-www-form-urlencoded">
+        <form action="/reply/save" method="post">
+        <!-- ★★JSON은 DTO로만 받을 수 있다. -->
+            <input type="hidden" name="boardId" value="{{dtos.0.boardId}}">
+            <!-- ★★ 댓글이 어떠한 게시글의 댓글인 지 boardId가 필요하다. -->
             <div>
-                <textarea class="form-control" rows="1" placeholder="댓글 달기...." id="comment" name="commnet"></textarea>
+                <textarea class="form-control" rows="1" placeholder="댓글 달기...." id="comment" name="comment"></textarea>
             </div>
             <div class="card-footer d-flex justify-content-end">
                 <button type="submit" class="btn"><img width="24" height="24"
@@ -57,21 +58,26 @@
     </div>
 
     <!-- 댓글리스트 -->
+    {{#dtos}}
+    {{#replyId}}
     <div class="card">
         <div class="card-header">댓글</div>
         <div class="card-padding card-footer d-flex justify-content-between align-items-center">
-            <div class="d-flex flex-column justify-content-start">
-                <p class="commnet-username mb-0">ssar</p>
-                <p class="mb-0">주말만 되면 맛있는 거 먹으러 가던데, 그러면 살쪄요.</p>
-            </div>
+                <div class="d-flex flex-column justify-content-start">
+                        <p class="commnet-username mb-0">{{replyUserUsername}}</p>
+                        <!-- 댓글의 존재유무를 true/false로 하지 않으면, replyUserUsername의 key가 null이라서 No Key 오류가 뜬다. -->
+                        <p class="mb-0">{{replyComment}}</p>
+                </div>
             <div class="d-flex justify-content-end">
-                <form action="#" method="post" enctype="application/x-www-form-urlencoded">
-                    <input type="hidden" class="form-control" value="삭제" name="삭제">
+                <form action="/reply/{{replyId}}/delete" method="post" enctype="application/x-www-form-urlencoded">
+                    <input type="hidden" class="form-control" value="{{boardId}}" name="boardId">
                     <button type="submit" class="btn"><img width="24" height="24"
                             src="https://img.icons8.com/material/24/waste--v1.png" alt="waste--v1" /></button>
                 </form>
             </div>
         </div>
     </div>
+    {{/replyId}}
+    {{/dtos}}
 </div>
 {{> /layout/footer}}
