댓글 진행중

--- a/src/main/resources/templates/board/detailForm.mustache
+++ b/src/main/resources/templates/board/detailForm.mustache
@@ -71,6 +71,7 @@
             <div class="d-flex justify-content-end">
                 <form action="/reply/{{replyId}}/delete" method="post" enctype="application/x-www-form-urlencoded">
                     <input type="hidden" class="form-control" value="{{boardId}}" name="boardId">
+                    <input type="hidden" class="form-control" value="{{replyUserId}}" name="replyUserId">
                     <button type="submit" class="btn"><img width="24" height="24"
                             src="https://img.icons8.com/material/24/waste--v1.png" alt="waste--v1" /></button>
                 </form>
