--- a/src/main/resources/templates/user/loginForm.mustache
+++ b/src/main/resources/templates/user/loginForm.mustache
@@ -9,7 +9,7 @@
         <div class="card-body">
             <form action="/login" method="post" enctype="application/x-www-form-urlencoded">
                 <div class="mb-3">
-                    <input type="text" class="form-control" placeholder="Enter username" name="username" required maxlength="20" value="ssar">
+                    <input type="text" class="form-control" placeholder="Enter username" name="username" required maxlength="20" value="hong">
                 </div>
                 <div class="mb-3">
                     <input type="password" class="form-control" placeholder="Enter password" name="password" required maxlength="20" value="1234">
