게시물 검색 완료

--- a/src/main/resources/templates/error/ex40x.mustache
+++ b/src/main/resources/templates/error/ex40x.mustache
@@ -7,9 +7,9 @@
     <title>Document</title>
     <style>
         .err {
-            color: red;
-            background-color: blueviolet;
-            font-size: 500px;
+            color: white;
+            background-color: black;
+            font-size: 30px;
         }
     </style>
 
