--- a/src/main/resources/templates/user/joinForm.mustache
+++ b/src/main/resources/templates/user/joinForm.mustache
@@ -16,7 +16,7 @@
                 <div class="mb-3">
                     <input type="text" id="username" class="form-control" placeholder="Enter username" name="username"
                         required maxlength="20" onchange="usernameChange()">
-                    <button type="button" onclick="check()">중복체크</button>
+                    <button type="button" class="btn btn-warning" id="check-button" onclick="check()">중복체크</button>
                     <!-- Form 태그 안의 button의 기본값은 submit이다. -->
                 </div>
                 <div class="mb-3">
