--- a/src/main/resources/templates/layout/header.mustache
+++ b/src/main/resources/templates/layout/header.mustache
@@ -22,6 +22,9 @@
         font-weight: bold;
     }
 
+    #check-button {
+        margin-top: 13px;
+    }
 
     .footer {
         background-color: rgb(222, 222, 222);
