--- a/src/main/resources/templates/layout/header.mustache
+++ b/src/main/resources/templates/layout/header.mustache
@@ -26,6 +26,13 @@
         margin-top: 13px;
     }
 
+    #reply-save-button {
+        margin: 0;
+        background-color: white;
+        border-color: white;
+    }
+
+
     .footer {
         background-color: rgb(222, 222, 222);
     }
