--- a/src/main/resources/templates/board/detailForm.mustache
+++ b/src/main/resources/templates/board/detailForm.mustache
@@ -52,7 +52,7 @@
             <div>
                 <textarea class="form-control" rows="1" placeholder="댓글 달기...." id="comment" name="comment"></textarea>
             </div>
-            <div class="card-footer d-flex justify-content-end">
+            <div class="card-footer d-flex justify-content-end" id="reply-save-button">
                 <button type="submit" class="btn" ><img width="27" height="27" src="https://img.icons8.com/color/48/checked-checkbox.png" alt="checked-checkbox"/></button>
             </div>
         </form>
